--- a/web/WebApplication1/WebApplication1/index.html
+++ b/web/WebApplication1/WebApplication1/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="projetVEL">
 
-    <title>projetVEL liste des Algorithmes</title>
+    <title>Liste Algorithmes</title>
 
     <script src="scripts/jQuery.Bootstrap.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <div ng-app="demo">
+    <div ng-app="algoApp">
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
@@ -55,7 +55,7 @@
             <!-- /.container -->
         </nav>
         <!-- Page Content -->
-        <div class="container" ng-controller="mycontroller">
+        <div class="container" ng-controller="mainController">
             <!-- Page Heading -->
             <div class="row">
                 <div class="col-lg-12">
