--- a/web/WebApplication1/WebApplication1/HtmlPage.html
+++ b/web/WebApplication1/WebApplication1/HtmlPage.html
@@ -6,19 +6,19 @@
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
     <!-- Custom CSS -->
-    <link href="Content/1-col-portfolio.css" rel="stylesheet" />    <link href="Content/angular-slider.css" rel="stylesheet" />
+    <link href="Content/1-col-portfolio.css" rel="stylesheet" />    <link href="Content/rzslider.min.css" rel="stylesheet" />
     
     <script type="text/javascript" src="scripts/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="scripts/jquery.signalR-2.2.0.js"></script>
     <script type="text/javascript" src="scripts/Constellation-1.8.0.js"></script>
     <script type="text/javascript" src="scripts/angular.min.js"></script>
-    <script src="scripts/ngConstellation-1.8.0.js">   </script><script src="scripts/angular-slider.js"></script>
+    <script src="scripts/ngConstellation-1.8.0.js"></script>    <script src="scripts/rzslider.min.js"></script>
     <script src="scripts/ng_algorithme.js"></script>
 
     <title ng-controller="titleController">{{title}}</title>
 
 </head>
-<body>
+<body ng-controller="mainController">
     <div>
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
@@ -44,93 +44,118 @@
                 </div>
                 <!-- /.navbar-collapse -->
             </div>
-            <!-- /.container -->
         </nav>
-
-        <div class="row" ng-controller="mainController">
-            {{sent}}
-            <div class="col-sm-offset-1 col-sm-4">
-                <h3>IF</h3>
-                <div class="well" ng-repeat="i in Algorithme.Conditions track by $index">
-                    <div>Sentinelle : {{Algorithme.Conditions[$index].Variables.sentinel}} </div>
-                    <div>Package : {{Algorithme.Conditions[$index].Variables.package}}</div>
-                    <div>
-                        Variable : {{Algorithme.Conditions[$index].Variables.variable}}
-                        <span> {{Algorithme.Conditions[$index].OperationTested}} </span>
-                        <span> {{Algorithme.Conditions[$index].Value}} </span>
-                    </div>
+        <div class="container">
+            <button type="button" class="btn btn-primary pull-right top">Envoyer à Constellation</button>
+            <button type="button" class="btn btn-primary pull-left top">Retour Index</button>
+            <div><h1 class="page-header" style="text-align:center">Nom (TextInput) : {{Algorithme.Name}}</h1></div>
+            <div class="row">
+                <div class="col-md-7">
+                    <a href="#">
+                        <img class="img-responsive" src="{{Algorithme.URLPhotoDescription}}" width="700" alt="" />
+                    </a>
                 </div>
-                <h3>Plage horaire :</h3>
-                <div class="well">
+                <div class="col-md-5">
+                    <p>URL de la photo de présentation (textInput) : {{Algorithme.URLPhotoDescription}}</p>
+                    <p>Description (textInput) : </p>
+                    <p>{{Algorithme.Description}}</p>
+                </div>
+            </div>
+            <hr />
+            </div>
+        <div class="row">
+            <div class="col-sm-offset-1 col-sm-4">
+                <h1 style="text-align : center">IF</h1>
+                <div class="well" ng-repeat="i in Algorithme.Conditions track by $index">
+                    <div>Sentinelle (liste) : {{Algorithme.Conditions[$index].Variables.sentinel}} </div>
+                    <div>Package (liste) : {{Algorithme.Conditions[$index].Variables.package}}</div>
                     <div>
-                        boutons plus sexy à intégrer plus tard<br/>
-                        <label>
-                            Lundi:
-                            <input type="checkbox" ng-model="Algorithme.Schedule.Week.Monday">
-                        </label><br />
-                        <label>
-                            Mardi:
-                            <input type="checkbox" ng-model="Algorithme.Schedule.Week.Tuesday">
-                        </label><br />
-                        <label>
-                            Mercredi:
-                            <input type="checkbox" ng-model="Algorithme.Schedule.Week.Wednesday">
-                        </label><br />
-                        <label>
-                            Jeudi:
-                            <input type="checkbox" ng-model="Algorithme.Schedule.Week.Thursday">
-                        </label><br />
-                        <label>
-                            Vendredi:
-                            <input type="checkbox" ng-model="Algorithme.Schedule.Week.Friday">
-                        </label><br />
-                        <label>
-                            Samedi:
-                            <input type="checkbox" ng-model="Algorithme.Schedule.Week.Saturday">
-                        </label><br />
-                        <label>
-                            Dimanche:
-                            <input type="checkbox" ng-model="Algorithme.Schedule.Week.Sunday">
-                        </label><br />
+                        Variable (liste) : {{Algorithme.Conditions[$index].Variables.variable}}
+                        <span> (liste) {{Algorithme.Conditions[$index].OperationTested}} </span>
+                        <span> (zoneInputText) {{Algorithme.Conditions[$index].Value}} </span>
                     </div>
-                    <div>
-                        {{Algorithme.Schedule.Begin.Second}} {{Algorithme.Schedule.End.Second}}
-                        Plages temporelles :
-
-
-
-
-                        <slider floor="10" ceiling="60" ng-model-low="Algorithme.Schedule.Begin.Second" ng-model-high="Algorithme.Schedule.End.Second"></slider>
-
-
-
-
-
-
-                    </div>
-                    <div>Plage de réactivation : {{Algorithme.Schedule.ReactivationPeriode}}</div>
                 </div>
                 <button type="button" class="btn btn-primary btn-lg" ng-click="addCondition()">Ajouter Condition</button>
+                <button type="button" class="btn btn-primary btn-lg" ng-click="afficherPlageHoraire = !afficherPlageHoraire">
+                {{afficherPlageHoraire ? 'moins' : 'plus'}} d'options</button>
+                <div ng-show="afficherPlageHoraire">
+                    <h3>Plage horaire (boutons plus sexy à intégrer plus tard) :</h3>
+                    <div class="well">
+                        <div>
+                            <label>
+                                Lundi:
+                                <input type="checkbox" ng-model="Algorithme.Schedule.Week.Monday">
+                            </label><br />
+                            <label>
+                                Mardi:
+                                <input type="checkbox" ng-model="Algorithme.Schedule.Week.Tuesday">
+                            </label><br />
+                            <label>
+                                Mercredi:
+                                <input type="checkbox" ng-model="Algorithme.Schedule.Week.Wednesday">
+                            </label><br />
+                            <label>
+                                Jeudi:
+                                <input type="checkbox" ng-model="Algorithme.Schedule.Week.Thursday">
+                            </label><br />
+                            <label>
+                                Vendredi:
+                                <input type="checkbox" ng-model="Algorithme.Schedule.Week.Friday">
+                            </label><br />
+                            <label>
+                                Samedi:
+                                <input type="checkbox" ng-model="Algorithme.Schedule.Week.Saturday">
+                            </label><br />
+                            <label>
+                                Dimanche:
+                                <input type="checkbox" ng-model="Algorithme.Schedule.Week.Sunday">
+                            </label><br />
+                        </div>
+                        <div>
+                            Plages temporelles (range sliders) :
+
+                            <div>secondes</div>
+                            <div>min</div>
+                            <div>heures</div>
+                            <div>jours</div>
+                            <div>mois</div>
+
+                        </div>
+                        <div>Plage de réactivation (liste) : {{Algorithme.Schedule.ReactivationPeriode}}</div>
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-offset-1 col-sm-4">
-                <h3>THEN</h3>
+
+            <div class="col-sm-offset-1 col-sm-5">
+                <h1 style="text-align:center">THEN</h1>
                 <div class="well" ng-repeat="i in Algorithme.Executions track by $index">
-                    <div>Sentinelle : {{Algorithme.Executions[$index].Variables.sentinel}} </div>
-                    <div>Package : {{Algorithme.Executions[$index].Variables.package}}</div>
+                    <div>Sentinelle (liste) : {{Algorithme.Executions[$index].Variables.sentinel}} </div>
+                    <div>Package (liste) : {{Algorithme.Executions[$index].Variables.package}}</div>
                     <div>
-                        CallBack : {{Algorithme.Executions[$index].Variables.callBack}}(
+                        CallBack (liste) : {{Algorithme.Executions[$index].Variables.callBack}}( (addButton : inputText)
                         <span ng-repeat="i in Algorithme.Executions[$index].Arguments">{{Algorithme.Executions[$parent.$index].Arguments[$index]}}, </span>
                         )
                     </div>
                 </div>
-                <div class="well">
-                    <div></div>
-                </div>
                 <button type="button" class="btn btn-primary btn-lg" ng-click="addExecution()">Ajouter Execution</button>
+                <button type="button" class="btn btn-primary btn-lg" ng-click="afficherDesactivation = !afficherDesactivation">
+                {{afficherDesactivation ? 'moins' : 'plus'}} d'options</button>
+                <div ng-show="afficherDesactivation">
+                    <h3>Desactivation de l'Algorithme :</h3>
+                    <div class="well">
+                        <label>
+                            ActiverAlgo:
+                            <input type="checkbox" ng-model="Algorithme.IsActive">
+                        </label><br />
+                        <div>Temps d'attente (inputText) : {{Algorithme.Waiting}} secondes</div>
+                        <label>
+                            Desactiver après exécution (ne peut être en mm temps qu'un wait) :
+                            <input type="checkbox" ng-model="Algorithme.DisableAfterRealisation" />
+                        </label>
+                    </div>
+                </div>
             </div>
-        </div>
-        <button type="button" class="btn btn-primary col-sm-offset-1 col-sm-2 pull-right bottom">Envoyer à Constellation</button>
-        <button type="button" class="btn btn-primary col-sm-offset-1 col-sm-2 pull-left bottom">Retour Index</button>
+        </div>        
     </div>
 </body>
 </html>
