--- a/web/WebApplication1/WebApplication1/HtmlPage.html
+++ b/web/WebApplication1/WebApplication1/HtmlPage.html
@@ -6,20 +6,21 @@
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
     <!-- Custom CSS -->
-    <link href="Content/1-col-portfolio.css" rel="stylesheet" />    <link href="Content/rzslider.min.css" rel="stylesheet" />
-    
+    <link href="Content/1-col-portfolio.css" rel="stylesheet" />
+    <link href="Content/rzslider.min.css" rel="stylesheet" />
+
     <script type="text/javascript" src="scripts/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="scripts/jquery.signalR-2.2.0.js"></script>
     <script type="text/javascript" src="scripts/Constellation-1.8.0.js"></script>
     <script type="text/javascript" src="scripts/angular.min.js"></script>
-    <script src="scripts/ngConstellation-1.8.0.js"></script>    <script src="scripts/rzslider.min.js"></script>
+    <script src="scripts/ngConstellation-1.8.0.js"></script>
+    <script src="scripts/rzslider.min.js"></script>
     <script src="scripts/ng_algorithme.js"></script>
 
     <title ng-controller="titleController">{{title}}</title>
 
 </head>
 <body ng-controller="mainController">
-    <div>
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -45,6 +46,7 @@
                 <!-- /.navbar-collapse -->
             </div>
         </nav>
+        <!-- alerts-->
         <div class="container">
             <div class="alert alert-success" ng-show="ConnectionSuccess && sent != undefined && LoadingAlgoSuccess">
                 <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
@@ -62,117 +64,144 @@
                 <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
                 <strong>Sentinelle non communiquée</strong>, retournez à l'index et rechargez l'Algorithme.
             </div>
-            <button type="button" class="btn btn-primary pull-right top" ng-show="ConnectionSuccess && sent != undefined 
-                    && LoadingAlgoSuccess" ng-click="verifAndSendAlgo()">Envoyer à Constellation</button>
+            <!-- buttons -->
+            <button type="button" class="btn btn-primary pull-right top" ng-show="ConnectionSuccess && sent != undefined
+                    && LoadingAlgoSuccess" ng-click="verifAndSendAlgo()">
+                Envoyer à Constellation
+            </button>
             <a type="button" href="http://localhost:56215" class="btn btn-primary pull-left top">Retour Index</a>
-            <div><h1 class="page-header" style="text-align:center">Nom (TextInput) : {{Algorithme.Name}}</h1></div>
-            <div class="row">
-                <div class="col-md-7">
-                    <a href="#">
-                        <img class="img-responsive" src="{{Algorithme.URLPhotoDescription}}" width="700" alt="" />
-                    </a>
+            <!-- title then url's picture and description -->
+            <div ng-show="LoadingAlgoSuccess">
+                <div>                        
+                    <h1 class="page-header" style="text-align:center">                        
+                        Nom :
+                        <input type="text" style="background: white; border: 1px solid #DDD; border-radius: 5px;box-shadow: 0 0 5px #DDD inset;
+                      height: 45px; width: 275px;" ng-model="Algorithme.Name" />
+                        Activation : <input type="checkbox" ng-model="Algorithme.IsActive">
+                    </h1>
                 </div>
-                <div class="col-md-5">
-                    <p>URL de la photo de présentation (textInput) : {{Algorithme.URLPhotoDescription}}</p>
-                    <p>Description (textInput) : </p>
-                    <p>{{Algorithme.Description}}</p>
-                </div>
-            </div>
-            <hr />
-            </div>
-        <div class="row">
-            <div class="col-sm-offset-1 col-sm-4">
-                <h1 style="text-align : center">IF</h1>
-                <div class="well" ng-repeat="i in Algorithme.Conditions track by $index">
-                    <div>Sentinelle (liste) : {{Algorithme.Conditions[$index].Variables.sentinel}} </div>
-                    <div>Package (liste) : {{Algorithme.Conditions[$index].Variables.package}}</div>
-                    <div>
-                        Variable (liste) : {{Algorithme.Conditions[$index].Variables.variable}}
-                        <span> (liste) {{Algorithme.Conditions[$index].OperationTested}} </span>
-                        <span> (zoneInputText) {{Algorithme.Conditions[$index].Value}} </span>
+                <div class="row">
+                    <div class="col-md-7">
+                        <img class="img-responsive, img-thumbnail center-block" src="{{Algorithme.URLPhotoDescription}}"
+                             width="700" style="max-height:290px;" />
                     </div>
-                </div>
-                <button type="button" class="btn btn-primary btn-lg" ng-click="addCondition()">Ajouter Condition</button>
-                <button type="button" class="btn btn-primary btn-lg" ng-click="afficherPlageHoraire = !afficherPlageHoraire">
-                {{afficherPlageHoraire ? 'moins' : 'plus'}} d'options</button>
-                <div ng-show="afficherPlageHoraire">
-                    <h3>Plage horaire (boutons plus sexy à intégrer plus tard) :</h3>
-                    <div class="well">
-                        <div>
-                            <label>
-                                Lundi:
-                                <input type="checkbox" ng-model="Algorithme.Schedule.Week.Monday">
-                            </label><br />
-                            <label>
-                                Mardi:
-                                <input type="checkbox" ng-model="Algorithme.Schedule.Week.Tuesday">
-                            </label><br />
-                            <label>
-                                Mercredi:
-                                <input type="checkbox" ng-model="Algorithme.Schedule.Week.Wednesday">
-                            </label><br />
-                            <label>
-                                Jeudi:
-                                <input type="checkbox" ng-model="Algorithme.Schedule.Week.Thursday">
-                            </label><br />
-                            <label>
-                                Vendredi:
-                                <input type="checkbox" ng-model="Algorithme.Schedule.Week.Friday">
-                            </label><br />
-                            <label>
-                                Samedi:
-                                <input type="checkbox" ng-model="Algorithme.Schedule.Week.Saturday">
-                            </label><br />
-                            <label>
-                                Dimanche:
-                                <input type="checkbox" ng-model="Algorithme.Schedule.Week.Sunday">
-                            </label><br />
-                        </div>
-                        <div>
-                            Plages temporelles (range sliders) :
-
-                            <div>secondes</div>
-                            <div>min</div>
-                            <div>heures</div>
-                            <div>jours</div>
-                            <div>mois</div>
-
-                        </div>
-                        <div>Plage de réactivation (liste) : {{Algorithme.Schedule.ReactivationPeriode}}</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-sm-offset-1 col-sm-5">
-                <h1 style="text-align:center">THEN</h1>
-                <div class="well" ng-repeat="i in Algorithme.Executions track by $index">
-                    <div>Sentinelle (liste) : {{Algorithme.Executions[$index].Variables.sentinel}} </div>
-                    <div>Package (liste) : {{Algorithme.Executions[$index].Variables.package}}</div>
-                    <div>
-                        CallBack (liste) : {{Algorithme.Executions[$index].Variables.callBack}}( (addButton : inputText)
-                        <span ng-repeat="i in Algorithme.Executions[$index].Arguments">{{Algorithme.Executions[$parent.$index].Arguments[$index]}}, </span>
-                        )
-                    </div>
-                </div>
-                <button type="button" class="btn btn-primary btn-lg" ng-click="addExecution()">Ajouter Execution</button>
-                <button type="button" class="btn btn-primary btn-lg" ng-click="afficherDesactivation = !afficherDesactivation">
-                {{afficherDesactivation ? 'moins' : 'plus'}} d'options</button>
-                <div ng-show="afficherDesactivation">
-                    <h3>Desactivation de l'Algorithme :</h3>
-                    <div class="well">
+                    <div class="col-md-5">
                         <label>
-                            ActiverAlgo:
-                            <input type="checkbox" ng-model="Algorithme.IsActive">
-                        </label><br />
-                        <div>Temps d'attente (inputText) : {{Algorithme.Waiting}} secondes</div>
+                            URL de la photo de présentation : <br />
+                            <input type="text" name="input" style="width:455px;" ng-model="Algorithme.URLPhotoDescription">
+                        </label>
                         <label>
-                            Desactiver après exécution (ne peut être en mm temps qu'un wait) :
-                            <input type="checkbox" ng-model="Algorithme.DisableAfterRealisation" />
+                            Description : <br />
+                            <textarea class="form-control" style="height:215px; width:455px; max-width:455px; max-height:215px; resize:none;"
+                                      ng-model="Algorithme.Description"></textarea>
                         </label>
                     </div>
                 </div>
+                <hr />
+                <div class="row, table-responsive">
+                    <div class="col-sm-offset-1 col-sm-4">
+                        <h1 style="text-align : center">IF</h1>
+                        <div class="well" ng-repeat="i in Algorithme.Conditions track by $index">
+                            <div>Sentinelle (liste) : {{Algorithme.Conditions[$index].Variables.sentinel}} </div>
+                            <div>Package (liste) : {{Algorithme.Conditions[$index].Variables.package}}</div>
+                            <div>
+                                Variable (liste) : {{Algorithme.Conditions[$index].Variables.variable}}
+                                <span> (liste) {{Algorithme.Conditions[$index].OperationTested}} </span>
+                                <span> (zoneInputText) {{Algorithme.Conditions[$index].Value}} </span>
+                            </div>
+                        </div>
+                        <button type="button" class="btn btn-primary btn-lg" ng-click="addCondition()">Ajouter Condition</button>
+                        <button type="button" class="btn btn-primary btn-lg" ng-click="afficherPlageHoraire = !afficherPlageHoraire">
+                            {{afficherPlageHoraire ? 'Moins' : 'Plus'}} d'options
+                        </button>
+                        <div ng-show="afficherPlageHoraire">
+                            <h3>Plage horaire (boutons plus sexy à intégrer plus tard) :</h3>
+                            <div class="well">
+                                <div>
+                                    <label>
+                                        Lundi:
+                                        <input type="checkbox" ng-model="Algorithme.Schedule.Week.Monday">
+                                    </label><br />
+                                    <label>
+                                        Mardi:
+                                        <input type="checkbox" ng-model="Algorithme.Schedule.Week.Tuesday">
+                                    </label><br />
+                                    <label>
+                                        Mercredi:
+                                        <input type="checkbox" ng-model="Algorithme.Schedule.Week.Wednesday">
+                                    </label><br />
+                                    <label>
+                                        Jeudi:
+                                        <input type="checkbox" ng-model="Algorithme.Schedule.Week.Thursday">
+                                    </label><br />
+                                    <label>
+                                        Vendredi:
+                                        <input type="checkbox" ng-model="Algorithme.Schedule.Week.Friday">
+                                    </label><br />
+                                    <label>
+                                        Samedi:
+                                        <input type="checkbox" ng-model="Algorithme.Schedule.Week.Saturday">
+                                    </label><br />
+                                    <label>
+                                        Dimanche:
+                                        <input type="checkbox" ng-model="Algorithme.Schedule.Week.Sunday">
+                                    </label><br />
+                                </div>
+                                <div>
+                                    Plages temporelles (range sliders) :
+
+                                    <div>secondes</div>
+                                    <div>min</div>
+                                    <div>heures</div>
+                                    <div>jours</div>
+                                    <div>mois</div>
+
+                                </div>                                
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-offset-1 col-sm-5">
+                        <h1 style="text-align:center">THEN</h1>
+                        <div class="well" ng-repeat="i in Algorithme.Executions track by $index">
+                            <div>Sentinelle (liste) : {{Algorithme.Executions[$index].Variables.sentinel}} </div>
+                            <div>Package (liste) : {{Algorithme.Executions[$index].Variables.package}}</div>
+                            <div>
+                                CallBack (liste) : {{Algorithme.Executions[$index].Variables.callBack}}( (addButton : inputText)
+                                <span ng-repeat="i in Algorithme.Executions[$index].Arguments">{{Algorithme.Executions[$parent.$index].Arguments[$index]}}, </span>
+                                )
+                            </div>
+                        </div>
+                        <button type="button" class="btn btn-primary btn-lg" ng-click="addExecution()">Ajouter Execution</button>
+                        <button type="button" class="btn btn-primary btn-lg" ng-click="afficherDesactivation = !afficherDesactivation">
+                            {{afficherDesactivation ? 'Moins' : 'Plus'}} d'options
+                        </button>
+                        <div ng-show="afficherDesactivation">
+                            <h3>Désactivation de l'Algorithme :</h3>
+                            <div class="well">                               
+                                    Temps d'attente :
+                                    <input type="number" min="0" ng-change="Algorithme.DisableAfterRealisation = false" 
+                                           ng-model="Algorithme.Waiting" /> seconde{{Algorithme.Waiting > 1 ? 's' : ''}}<br />
+                                    <label>
+                                        Désactiver après exécution :
+                                        <input type="checkbox" ng-click="!Algorithme.DisableAfterRealisation ? null : Algorithme.Waiting = 0"
+                                               ng-model="Algorithme.DisableAfterRealisation" />
+                                    </label>
+                                    <div ng-show="Algorithme.DisableAfterRealisation">
+                                        Se réactive chaque plage
+                                        d{{Algorithme.Schedule.ReactivationPeriode == "Hours" ? "'" : "e"}} :
+                                        <select ng-model="Algorithme.Schedule.ReactivationPeriode">
+                                            <option value="Minutes">Minutes</option>
+                                            <option value="Hours">Heures</option>
+                                            <option value="Days">Jours</option>
+                                            <option value="Months">Mois</option>
+                                        </select>
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>        
-    </div>
+        </div>
 </body>
 </html>
